--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "plantly",
   "version": "1.0.0",
-  "main": "index.ts",
+  "main": "expo-router/AppEntry",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -11,9 +11,16 @@
   },
   "dependencies": {
     "expo": "~53.0.20",
+    "expo-constants": "~17.1.7",
+    "expo-linking": "~7.1.7",
+    "expo-router": "~5.1.4",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
-    "react-native": "0.79.5"
+    "react-dom": "19.0.0",
+    "react-native": "0.79.5",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.11.1",
+    "react-native-web": "^0.20.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
