--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "expo": "~53.0.20",
     "expo-constants": "~17.1.7",
     "expo-linking": "~7.1.7",
