--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@react-native-async-storage/async-storage": "^2.2.0",
     "expo": "~53.0.20",
     "expo-constants": "~17.1.7",
+    "expo-haptics": "^14.1.4",
+    "expo-linear-gradient": "^14.1.5",
     "expo-linking": "~7.1.7",
     "expo-router": "~5.1.4",
     "expo-status-bar": "~2.2.3",
