--- a/app.json
+++ b/app.json
@@ -27,6 +27,9 @@
       "favicon": "./assets/favicon.png",
       "bundler": "metro"
     },
+    "extra": {
+      "transpilePackages": ["zustand"]
+    },
     "plugins": [
       "expo-router"
     ]
