--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "plantly",
   "version": "1.0.0",
   "main": "expo-router/entry",
+  "type": "module",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
