--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "expo": "~53.0.20",
     "expo-constants": "~17.1.7",
     "expo-haptics": "^14.1.4",
+    "expo-image-picker": "^16.1.4",
     "expo-linear-gradient": "^14.1.5",
     "expo-linking": "~7.1.7",
     "expo-router": "~5.1.4",
