--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-native-async-storage/async-storage": "^2.2.0",
     "expo": "~53.0.20",
     "expo-constants": "~17.1.7",
+    "expo-file-system": "^18.1.11",
     "expo-haptics": "^14.1.4",
     "expo-image-picker": "^16.1.4",
     "expo-linear-gradient": "^14.1.5",
