--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
     "@react-native-async-storage/async-storage": "^2.2.0",
+    "date-fns": "^4.1.0",
     "expo": "~53.0.20",
     "expo-constants": "~17.1.7",
     "expo-file-system": "^18.1.11",
