--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "type": "module",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "lint": "expo lint"
   },
@@ -16,6 +16,7 @@
     "date-fns": "^4.1.0",
     "expo": "~53.0.20",
     "expo-constants": "~17.1.7",
+    "expo-dev-client": "^5.2.4",
     "expo-file-system": "^18.1.11",
     "expo-haptics": "^14.1.4",
     "expo-image-picker": "^16.1.4",
@@ -23,6 +24,7 @@
     "expo-linking": "~7.1.7",
     "expo-router": "~5.1.4",
     "expo-status-bar": "~2.2.3",
+    "expo-system-ui": "^5.0.10",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.5",
