adding custom fonts

--- a/app.json
+++ b/app.json
@@ -39,7 +39,13 @@
       }
     },
     "plugins": [
-      "expo-router"
+      "expo-router",
+      [
+        "expo-font",
+        {
+          "fonts": ["node_modules/@expo-google-fonts/caveat/400Regular/Caveat_400Regular.ttf"]
+        }
+      ]
     ],
     "owner": "gsanc.tech"
   }
