--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint": "expo lint"
   },
   "dependencies": {
+    "@expo-google-fonts/caveat": "^0.4.1",
     "@expo/vector-icons": "^14.1.0",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "date-fns": "^4.1.0",
@@ -18,6 +19,7 @@
     "expo-constants": "~17.1.7",
     "expo-dev-client": "^5.2.4",
     "expo-file-system": "^18.1.11",
+    "expo-font": "^13.3.2",
     "expo-haptics": "^14.1.4",
     "expo-image-picker": "^16.1.4",
     "expo-linear-gradient": "^14.1.5",
