--- a/app.json
+++ b/app.json
@@ -14,7 +14,7 @@
       "backgroundColor": "#ffffff"
     },
     "ios": {
-      "icon": "./asset/icon.png",
+      "icon": "./assets/icon.png",
       "supportsTablet": true,
       "bundleIdentifier": "com.gtechsynergy.plantly"
     },
