quick actions is not found. going to try npm

--- a/app.json
+++ b/app.json
@@ -45,6 +45,17 @@
         {
           "fonts": ["node_modules/@expo-google-fonts/caveat/400Regular/Caveat_400Regular.ttf"]
         }
+      ],
+      [
+        "expo-quick-actions",
+        {
+          "androidIcons": {
+            "leaf": {
+              "foregroundImage": "./assets/leaf.png",
+              "backgroundColor": "#ffffff"
+            }
+          }
+        }
       ]
     ],
     "owner": "gsanc.tech"
