--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "start": "expo start",
+    "build": "expo prebuild --clean",
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
@@ -24,6 +25,7 @@
     "expo-image-picker": "^16.1.4",
     "expo-linear-gradient": "^14.1.5",
     "expo-linking": "~7.1.7",
+    "expo-quick-actions": "^5.0.0",
     "expo-router": "~5.1.4",
     "expo-status-bar": "~2.2.3",
     "expo-system-ui": "^5.0.10",
