--- a/package.json
+++ b/package.json
@@ -50,6 +50,5 @@
     "prettier": "^3.6.2",
     "typescript": "~5.8.3"
   },
-  "private": true,
-  "packageManager": "yarn@4.9.2"
+  "private": true
 }
